crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_3840x2160_edlines_moments.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.8444444444444444
  mean_precision: 1
  mean_rmse: 0.5162
  mean_reprojection_rmse: 0.5128
  p50_translation_error: 0.0099
  p90_translation_error: 0.0576
  p99_translation_error: 0.1101
  p50_rotation_error: 0.0854
  p90_rotation_error: 0.2391
  p99_rotation_error: 0.6968
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  geometry_violations: 0
  worst_offenders:
    - filename: scene_0009_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0020_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0022_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0023_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0025_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
