crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_3840x2160_sota.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.8888888888888888
  mean_precision: 1
  mean_rmse: 0.157
  mean_reprojection_rmse: 0.155
  p50_translation_error: 0.0015
  p90_translation_error: 0.0118
  p99_translation_error: 0.0259
  p50_rotation_error: 0.0563
  p90_rotation_error: 0.2933
  p99_rotation_error: 1.8977
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0008_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0020_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0022_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0025_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0030_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
