crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_640x480_fast.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 0.994
  mean_reprojection_rmse: 1.5698
  p50_translation_error: 0.0036
  p90_translation_error: 0.0172
  p99_translation_error: 0.0447
  p50_rotation_error: 1.2428
  p90_rotation_error: 6.6285
  p99_rotation_error: 16.1689
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0018_cam_0000.png
      missed: 0
      extra: 0
      rmse: 4.669
    - filename: scene_0006_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.6226
    - filename: scene_0002_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.1325
    - filename: scene_0021_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.9984
    - filename: scene_0012_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.6842
