crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_640x480_gwlf.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.9777777777777777
  mean_precision: 1
  mean_rmse: 0.7179
  mean_reprojection_rmse: 0.6778
  p50_translation_error: 0.0039
  p90_translation_error: 0.0115
  p99_translation_error: 0.0335
  p50_rotation_error: 0.1233
  p90_rotation_error: 0.3147
  p99_rotation_error: 5.2825
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0018_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0002_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.3669
    - filename: scene_0030_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.6056
    - filename: scene_0006_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.1563
