crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_640x480_sota.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.9333333333333333
  mean_precision: 1
  mean_rmse: 0.1727
  mean_reprojection_rmse: 0.1481
  p50_translation_error: 0.0006
  p90_translation_error: 0.0018
  p99_translation_error: 0.009
  p50_rotation_error: 0.1087
  p90_rotation_error: 0.2697
  p99_rotation_error: 0.6766
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  geometry_violations: 0
  worst_offenders:
    - filename: scene_0005_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0008_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0018_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
